Completed tests for store controller (createStore and findStore methods) - Angela